test/files/neg/t1009.check
t1009.scala:2: error: empty quoted identifier
  def `` = "fish"
      ^
one error found
